Mempool tests validation